<resources>
    <string name="app_name">True Sight ID</string>
    <string name="title_explore_news">Explore News</string>
    <string name="title_news_predict">News Predict</string>
    <string name="title_profile">Profile</string>
    <string name="fact_status">Fact</string>
    <string name="fake_status">Fake</string>
    <string name="news_prediction">News Prediction</string>
    <string name="hint_search_bar">Search news claims here…</string>
    <string name="add_your_claim">Add Your Claim</string>
    <string name="adj_title">Title</string>
    <string name="adj_author">Author</string>
    <string name="adj_content">Content</string>
    <string name="btn_predict_text">Predict Now</string>
    <string name="my_profile">My Profile</string>
    <string name="bookmark" translatable="false">Bookmark</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="content">CONTENT</string>
    <string name="preferences">PREFERENCES</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log-out</string>
    <string name="claimed_by">Claimed by: %1$s</string>
    <string name="point" translatable="false">•</string>
    <string name="your_image_profile">Your Image Profile</string>
    <string name="icon_bookmark" translatable="false">icon bookmark</string>
    <string name="go_to_bookmark">go to bookmark</string>
    <string name="icon_change_language">icon change language</string>
    <string name="go_to_change_language">go to change language</string>
    <string name="result_prediction">Result Prediction</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="save">Save</string>
    <string name="change_your_photo">Change your photo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="forgot_npassword">Forgot\nPassword?</string>
    <string name="don_t_worry_it_happens_please_enter_the_address_associated_with_your_account">Don’t worry! It Happens. Please enter the address associated with your account</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset\nPassword</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="add_claim">Add Claim</string>
    <string name="fact">Fact</string>
    <string name="fake">Fake</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="url" translatable="false">URL</string>
    <string name="attachments">Attachments</string>
    <string name="upload_evidence_images">Upload Evidence Images</string>
    <string name="preview_images">Preview Images</string>
    <string name="prediction_result">Prediction Result: </string>
    <string name="_100k" translatable="false">100K</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="oopss" translatable="false">Oops</string>
    <string name="my_claims">My Claims</string>
    <string name="go_to_my_claims">Go to my claims</string>
    <string name="icon_my_claim" translatable="false">icon my claim</string>
    <string name="title_activity_my_claim" translatable="false">MyClaimActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="back_button">Back button</string>
    <string name="list_of_your_claims">List of your Claims</string>
    <string name="no_claims_result">you have no claims, maybe create one?</string>
    <string name="you_have_no_claims">You have no claims!</string>
    <string name="prompt_create_one">maybe you can create one</string>
    <string name="no_search_result">No result for such keyword maybe try a different keyword</string>
    <string name="no_claims_found">No claims found</string>
    <string name="you_have_no_bookmarks">You have no bookmarks!</string>
    <string name="you_can_add_one_in_explore_page">you can add one in explore page</string>
    <string name="email_verification">Email\nVerification</string>
    <string name="verification_info">We have sent code to your email:</string>
    <string name="verify_account">Verify Account</string>
    <string name="did_not_receive_code">Didn’t receive code?</string>
    <string name="resend">Resend?</string>
    <string name="change_password">Change Password</string>
    <string name="cancel_changes">Cancel Changes</string>
    <string name="current_password">Current Password</string>
    <string name="re_type_new_password">Re-type New Password</string>
    <string name="empty" translatable="false" />
    <string name="dark_mode_icon" translatable="false">Dark Mode Icon</string>
    <string name="dark_mode_button" translatable="false">Dark Mode Button</string>
    <string name="icon_logout" translatable="false">Icon Logout</string>
    <string name="logout_button" translatable="false">Logout Button</string>
    <string name="your_post">Your post</string>
    <string name="_1_3" translatable="false">1/3</string>
    <string name="you_can_filter_what_you_want_to_search_here">You can filter what you want to search here</string>
    <string name="view_more">View more</string>
    <string name="view_less">View less</string>
    <string name="comment">Comment</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="read_more">… Read more</string>
    <string name="go_back_to_the_previous_page">Go back to the previous page</string>
    <string name="share_this_claim_to_other_users">Share this claim to other users</string>
    <string name="save_this_claim_to_your_bookmark">Save this claim to your Bookmark</string>
    <string name="image_preview">Image Preview</string>
    <string name="periksafakta_afp_com_nwww_cekfakta_com_ncnnindonesia_com" translatable="false">periksafakta.afp.com\nwww.cekfakta.com\ncnnindonesia.com\nyoutube.com\nfacebook.com</string>
    <string name="references">References</string>
    <string name="bookmark_button">bookmark button</string>
    <string name="apply_string">Apply</string>
    <string name="cancel_string">Cancel</string>
    <string name="search_filter_title">Search Filter</string>
    <string name="specific_date">Specific Date</string>
    <string name="anytime">Anytime</string>
    <string name="to">to</string>
    <string name="now">Now</string>
    <string name="upload_date">Upload Date</string>
    <string name="type">Type</string>
    <string name="sort_by">Sort By</string>
    <string name="hour_ago">hours ago</string>
    <string name="minute_ago">minutes ago</string>
    <string name="second_ago">seconds ago</string>
    <string-array name="filter_sort_by">
        <item>None</item>
        <item>Most Votes</item>
        <item>Least Votes</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string-array name="filter_type">
        <item>Any</item>
        <item>Fake</item>
        <item>Fact</item>
    </string-array>
    <string-array name="error_message">
        <item>Email already exists</item>
        <item>Username already exists</item>
        <item>Invalid email format</item>
        <item>Invalid username format</item>
        <item>Password too short</item>
        <item>User added</item>
        <item>No result</item>
        <item>Wrong email or password</item>
        <item>Already bookmarks</item>
        <item>Bookmark added</item>
        <item>Claim is not bookmarked</item>
        <item>Bookmark removed</item>
        <item>Claim already vote up</item>
        <item>Votes added</item>
        <item>Claim already vote down</item>
        <item>User not found</item>
        <item>Wrong verification code</item>
        <item>New password too short</item>
        <item>Wrong current password</item>
        <item>Registration successful, please verify your email</item>
        <item>Please verification this account first!</item>
    </string-array>
    <string name="LOADING">Loading…</string>
    <string name="share_messages">Let\'s join us to discuss the claims from %1$s! regarding %2$s! in the True Sight ID application.</string>
    <string name="send_to">Send to</string>
    <string name="description_must_be">Description must be at least %1$d words</string>
    <string name="description_must_under">Description must be under %1$d words</string>
    <string name="content_must_be">Content must be at least %1$d words</string>
    <string name="content_must_under">Content must be under %1$d words</string>
    <string name="title_must_be">Title must be at least %1$d words</string>
    <string name="title_must_be_under">Title must be under %1$d words</string>
    <string name="description_dirty_words">Your description contains dirty words, please fix it!</string>
    <string name="content_dirty_words">Your content contains dirty words, please fix it!</string>
    <string name="title_dirty_words">Your title contains dirty words, please fix it!</string>
    <string name="add_claim_successful">Add Claim Successful</string>
    <string name="add_claim_successful_content">Claim is added successfully, press OK to back to main menu</string>
    <string name="edit_profile_success">Edit Profile Success</string>
    <string name="edit_profile_success_content">Your profile has been updated, go back to profile page to see the changes</string>
    <string name="please_fill_all_blank">Please fill all blanks</string>
    <string name="password_not_match">Error: Password not match</string>
    <string name="added_to_bookmark">Added to Bookmark</string>
    <string name="removed_from_bookmark">Removed from Bookmark</string>
    <string name="page_refreshed">Page Refreshed</string>
    <string name="result_of">Result of %1$s</string>
    <string name="something_went_wrong">Error: Something went wrong</string>
    <string name="verification_has_been_sent">Verification code has been sent to your email, please check your inbox</string>
    <string name="are_you_sure_to_delete_this_bookmark">Are you sure to delete this bookmark?</string>
    <string name="click_delete_to_continue">click delete to continue</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="delete_failed">Delete failed</string>
    <string name="prediction_result_with_value">Prediction Result: %1$s</string>
    <string name="failed_to_get_data">Failed to get Data</string>
    <string name="something_is_wrong_check_internet">Something is wrong, Please check your internet connection</string>
    <string name="something_wrong_while_getting_user_info">Something wrong while getting user info!</string>
    <string name="password_changed">Password changed!</string>
    <string name="change_password_success">Change Password Success</string>
    <string name="password_has_been_updated">Your password has been updated, go back to login page to login with new password</string>
    <string name="registration_is_successful">Hi %1$s your registration is successful, Please verify your email first</string>
</resources>