<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/explore_news">

    <fragment
        android:id="@+id/explore_news"
        android:name="com.truesightid.ui.prediction.NewsPredictFragment"
        android:label="@string/title_explore_news"
        tools:layout="@layout/fragment_prediction" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.truesightid.ui.explore.ExploreNewsFragment"
        android:label="@string/title_news_predict"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.truesightid.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>