<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/search_filter_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/ll_tv_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintTop_toTopOf="@id/ll_dd_container"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/sort_by"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/type"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/upload_date"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_dd_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ll_tv_container"
            app:layout_constraintTop_toBottomOf="@+id/title_text">

            <Spinner
                android:id="@+id/dd_sort_by"
                style="@style/SpinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginBottom="16dp"
                android:entries="@array/filter_sort_by"
                android:spinnerMode="dropdown"
                android:backgroundTint="@color/default_filter_items"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/dd_type"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:entries="@array/filter_type"
                android:spinnerMode="dropdown"
                android:backgroundTint="@color/default_filter_items"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dd_sort_by" />

            <RadioGroup
                android:id="@+id/rg_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dd_type">

                <RadioButton
                    android:id="@+id/rb_anytime"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:checked="true"
                    android:textColor="@color/default_filter_items"
                    android:text="@string/anytime" />

                <RadioButton
                    android:id="@+id/rb_specific_date"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/default_filter_items"
                    android:text="@string/specific_date"/>
            </RadioGroup>

            <EditText
                android:id="@+id/date_from"
                android:layout_height="35dp"
                android:layout_width="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:textSize="14sp"
                android:focusableInTouchMode="false"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:hint="01/01/1970"
                android:textColorHint="@color/default_filter_title"
                app:layout_constraintTop_toBottomOf="@+id/rg_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/to"
                />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/default_filter_items"
                app:layout_constraintLeft_toRightOf="@id/date_from"
                app:layout_constraintTop_toTopOf="@id/date_from"
                app:layout_constraintRight_toLeftOf="@+id/date_to"
                app:layout_constraintBottom_toBottomOf="@id/date_from"
                />

            <EditText
                android:id="@+id/date_to"
                android:layout_height="35dp"
                android:layout_width="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:textSize="14sp"
                android:focusableInTouchMode="false"
                android:layout_marginStart="4dp"
                android:hint="@string/now"
                android:textColorHint="@color/default_filter_title"
                app:layout_constraintTop_toTopOf="@+id/date_from"
                app:layout_constraintLeft_toRightOf="@+id/to"
                app:layout_constraintRight_toRightOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_apply">

        </Button>

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>