<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.prediction.NewsPredictFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/news_prediction"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adj_title"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/title_news"
        app:layout_constraintStart_toStartOf="@+id/title_news" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/textView8">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adj_author"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/author_news"
        app:layout_constraintStart_toStartOf="@+id/author_news" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/author_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/title_news">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adj_content"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/content_news"
        app:layout_constraintStart_toStartOf="@+id/content_news" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/author_news">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="5"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_predict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_predict_text"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@null"
        android:backgroundTintMode="src_atop"
        app:layout_constraintEnd_toEndOf="@+id/content_news"
        app:layout_constraintStart_toStartOf="@+id/content_news"
        app:layout_constraintTop_toBottomOf="@+id/content_news" />

</androidx.constraintlayout.widget.ConstraintLayout>