<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mybookmark.MyBookmarkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_illustrator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="100dp"
            android:contentDescription="@string/no_claims_result"
            android:scaleType="centerInside"
            android:src="@drawable/il_no_result"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.442" />

        <TextView
            android:id="@+id/tv_illustrator1"
            style="@style/include_tv_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            android:text="@string/you_have_no_claims"
            app:layout_constraintEnd_toEndOf="@+id/iv_illustrator"
            app:layout_constraintStart_toStartOf="@+id/iv_illustrator"
            app:layout_constraintTop_toBottomOf="@+id/iv_illustrator" />

        <TextView
            android:id="@+id/tv_illustrator2"
            style="@style/include_tv_subTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            android:text="@string/prompt_create_one"
            app:layout_constraintEnd_toEndOf="@+id/tv_illustrator1"
            app:layout_constraintStart_toStartOf="@+id/tv_illustrator1"
            app:layout_constraintTop_toBottomOf="@+id/tv_illustrator1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMyClaim"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            android:scrollbarSize="0dp"
            tools:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_back_login"
            tools:listitem="@layout/item_row_claims" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>